--- a/MobileEco/index.html
+++ b/MobileEco/index.html
@@ -33,13 +33,13 @@
 			<!--a class="navbar-brand" href="#">Project name</a-->
 		</div>
 		<div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="index.html">首頁</a></li>
+			<ul id="main-nav" class="nav navbar-nav">
+				<li><a href="index.html">首頁</a></li>
 				<li><a href="course.html">課程資訊</a></li>
-				<li><a href="movie/index.html">微電影數位行銷系列課程</a></li>
-				<li><a href="commerce/index.html">電子商務系列課程</a></li>
-				<li><a href="mobile/index.html">行動經濟系列課程</a></li>
-				<li><a href="">馬上報名</a></li>
+				<li><a href="movie.html">微電影數位行銷系列課程</a></li>
+				<li><a href="commerce.html">電子商務系列課程</a></li>
+				<li><a href="mobile.html">行動經濟系列課程</a></li>
+				<li><a href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form">馬上報名</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
@@ -47,58 +47,50 @@
 <!-- InstanceBeginEditable name="content" -->
 <div class="content">
 <div class="container">
-	<p>【ICT 行銷暨商務學院】開設電子商務、微電影數位行銷及行動經濟等實務等課程，指導學員分組完成網站規劃與設計、微電影腳本創作、實作拍攝、剪輯後製、音樂特效及影片上線及智慧型手機 APP 程式設計等。</p>
+	<p class="main-intro">【ICT 行銷暨商務學院】開設電子商務、微電影數位行銷及行動經濟等實務等課程，指導學員分組完成網站規劃與設計、微電影腳本創作、實作拍攝、剪輯後製、音樂特效及影片上線及智慧型手機 APP 程式設計等。</p>
 
-<div><p>微電影數位行銷系列課程<br>
-30小時<br>
-微電影腳本創作、實作拍攝、剪輯後製、音樂特效及影片上線<br>
-</p></div>
-
-<div><p>電子商務系列課程<br>
-27小時<br>
-指導學員分組完成網站規劃與設計<br>
+<div id="i-movie" class="pre-intro  center-block">
+	<h2 style="color:rgba(255,52,194,1.00); ">微電影數位行銷系列課程<br>
+	</h2>
+	<p>30小時<br>
+		日期：2014年 6/28 ~ 8/9 每週六09:00 ~ 17:00<br>
+		微電影腳本創作、實作拍攝、剪輯後製、音樂特效及影片上線<br>
 </p>
 </div>
 
-<div><p>
-行動經濟系列課程<br>
+<div id="i-commerce" class="pre-intro  center-block">
+	<h2 style="color:rgba(28,65,255,1.00); ">電子商務系列課程<br>
+		</h2>
+	<p>27小時<br>
+		日期：2014年 7/12 ~ 8/9 每週六09:00 ~ 17:00<br>
+		指導學員分組完成網站規劃與設計<br>
+	</p>
+</div>
 
-30小時<br>
-
-智慧型手機 APP 程式設計<br>
-
-</p>
+<div id="i-mobile" class="pre-intro center-block">
+	<h2 style="color:rgba(27,231,62,1.00);">
+		行動經濟系列課程
+		
+	</h2>
+	<p>30小時<br>
+		日期：2014年 7/12 ~ 8/9 每週六09:00 ~ 17:00<br>
+		
+		智慧型手機 APP 程式設計<br>
+		
+	</p>
 </div>
 <div>
-	<p>2014年 <br>
-		微電影數位行銷6/28 ~ 8/9<br>
-		電子商務7/12 ~ 8/9<br>
-		行動經濟7/12 ~ 8/9<br>
-		每週六09:00 ~ 17:00</p>
+	<p><br>
+	</p>
 	<p>上課地點：亞東技術學院 <br>
 		招生對象：公司或工廠登記地址在新北市轄區之資通訊產業及對資通訊產業有興趣之中小企業負責人、中高階主管或獲公司推薦之員工 <br>
 		招生人數：每班40人，每一系列一班，共三班 <br>
 		費用：2000元 <br>
 		報名日期：即日起至系列課程開課前三天或額滿為止。 <br>
-		報名方式：https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form<br>
-		服務專線： <br>
-		(02) 2598-7495<br>
-		E-mail：amanda@ntca.org.tw<br>
-		主辦單位：新北市政府經濟發展局 <br>
-		執行單位：新北市電腦商業同業公會 </p>
-		
-		<div class="btn">
-			馬上報名GO
-	</div>
+			<a target="_blank" style="width:95%; margin:30px 0; height:50px;" href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form" class="btn btn-lg btn-primary center-block" >馬上報名GO</a>
 </div>
 </div>
 </div>
-
-<footer>
-<div class="container">
-<p>連絡我們（連結到信箱：amanda@ntca.org.tw）</p>
-</div>
-</footer>
 
 <!-- InstanceEndEditable -->
 
@@ -113,5 +105,6 @@
 </footer>
 
 <script src="js/jquery-2.1.1.min.js"></script>
+<script src="js/all.js"></script>
 </body>
 <!-- InstanceEnd --></html>
