--- a/MobileEco/course.html
+++ b/MobileEco/course.html
@@ -33,13 +33,13 @@
 			<!--a class="navbar-brand" href="#">Project name</a-->
 		</div>
 		<div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="index.html">首頁</a></li>
+			<ul id="main-nav" class="nav navbar-nav">
+				<li><a href="index.html">首頁</a></li>
 				<li><a href="course.html">課程資訊</a></li>
-				<li><a href="movie/index.html">微電影數位行銷系列課程</a></li>
-				<li><a href="commerce/index.html">電子商務系列課程</a></li>
-				<li><a href="mobile/index.html">行動經濟系列課程</a></li>
-				<li><a href="">馬上報名</a></li>
+				<li><a href="movie.html">微電影數位行銷系列課程</a></li>
+				<li><a href="commerce.html">電子商務系列課程</a></li>
+				<li><a href="mobile.html">行動經濟系列課程</a></li>
+				<li><a href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form">馬上報名</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
@@ -79,5 +79,6 @@
 </footer>
 
 <script src="js/jquery-2.1.1.min.js"></script>
+<script src="js/all.js"></script>
 </body>
 <!-- InstanceEnd --></html>
