--- a/MobileEco/commerce.html
+++ b/MobileEco/commerce.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>ICT行銷暨商務學院</title>
+<title>電子商務系列課程 | ICT行銷暨商務學院</title>
 <!-- InstanceEndEditable -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <script src="js/bootstrap.min.js"></script>
@@ -18,12 +18,11 @@
 	<div class="container" style="background-image:url(img/banner.png); background-size:cover; height:300px;">
 		<div class="seo">
 			<h1>ICT行銷暨商務學院</h1>
+		</div>
 	</div>
-</div>
-
-<div id="nav" class="navbar navbar-inverse" role="navigation" style="border:none;">
-	<div class="container " style="background:rgba(0,0,0,1.00); border-color: #080808;">
-		<div class="navbar-header ">
+	<div id="nav" class="navbar navbar-inverse" role="navigation" style="border:none;">
+	<div class="container " style=" background-image:url(img/footer.jpg); border-color: #080808;">
+		<div class="navbar-header "> 
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
@@ -39,15 +38,18 @@
 				<li><a href="movie.html">微電影數位行銷系列課程</a></li>
 				<li><a href="commerce.html">電子商務系列課程</a></li>
 				<li><a href="mobile.html">行動經濟系列課程</a></li>
-				<li><a href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form">馬上報名</a></li>
+				<li><a href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form" target="_blank">馬上報名</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
 </div>
+</div>
+
+
 <!-- InstanceBeginEditable name="content" -->
 <div id="commerce"  class="content">
 <div class="container">
-<p>電子商務系列課程 </p>
+<h1>電子商務系列課程 </h1>
 <p>上課時間：2014 / 7 / 12 ~ 2014 / 8 / 9，每周六09:00 ~ 12:00、14:00 ~ 17:00<br>
 	上課地點：亞東技術學院(新北市板橋區四川路二段58號)</p>
 <p>（圖片） </p>
