--- a/MobileEco/course.html
+++ b/MobileEco/course.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>ICT行銷暨商務學院</title>
+<title>課程資訊 | ICT行銷暨商務學院</title>
 <!-- InstanceEndEditable -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <script src="js/bootstrap.min.js"></script>
@@ -45,25 +45,66 @@
 	</div>
 </div>
 <!-- InstanceBeginEditable name="content" -->
-<div id="course"  class="content">
+<div class="content">
 <div class="container">
-<p>課程資訊 </p>
-<p>課程名稱：ICT行銷暨商務</p>
-<p> <br>
-	上課時間： <br>
-	微電影數位行銷2014 / 6 / 28 ~ 2014 / 7 / 26<br>
-	電子商務2014 / 7 / 12 ~ 2014 / 8 / 9<br>
-	行動經濟2014 / 7 / 12 ~ 2014 / 8 / 9<br>
-	每週六09:00 ~ 12:00、14:00 ~ 17:00</p>
-<p>上課地點：亞東技術學院（新北市板橋區四川路二段58號） </p>
-<p><br>
-招生對象：公司或工廠登記地址在新北市轄區之資通訊產業及對資通訊產業有興趣之中小企業負責人、中高階主管或獲公司推薦之員工 。</p>
-<p><br>
-	招生人數：每班40人，共三個不同班別。 <br>
-</p>
-<p>費用：2000元 <br>
-報名日期：即日起至系列課程開課前三天或額滿為止。</p>
+<div class="clearfix">
+<div id="i-movie" class="pre-intro  center-block">
+	<div>
+	<h2 style="color:rgba(255,52,194,1.00); ">微電影數位行銷系列課程	</h2>
+	
+	<p class="inside middle"><span>微電影腳本創作、實作拍攝、剪輯後製、音樂特效及影片上線</p><p class="time">2014年 6/28 ~ 8/9<br>
+		每週六09:00 ~ 17:00<br>
+		共30小時	</p></p>
+	<a class="btn btn-info" href="movie.html" style="width:100%;">查看課程</a>
 
+	</div>
+</div>
+
+<div id="i-commerce" class="pre-intro  center-block">
+	<div>
+	<h2 style="color:rgba(255,52,194,1.00); ">電子商務系列課程		</h2>
+	
+	<p class="inside middle"><span>指導學員分組完成網站規劃與設計</span> </p><p class="time">2014年 7/12 ~ 8/9<br>
+		每週六09:00 ~ 17:00<br>
+共27小時</p>
+	<a class="btn btn-info" href="commerce.html" style="width:100%;">查看課程</a>
+
+	</div>
+</div>
+
+<div id="i-mobile" class="pre-intro center-block">
+	<div>
+	<h2 style="color:rgba(255,52,194,1.00);">
+		行動經濟系列課程
+</h2>
+	
+	<p class="inside middle"><span>智慧型手機 APP 程式設計</span></p><p class="time">2014年 7/12 ~ 8/9<br>
+每週六09:00 ~ 17:00<br>
+共30小時</p>
+		<a class="btn btn-info" href="mobile.html" style="width:100%;">查看課程	</a>
+
+	</div>
+
+</div>
+</div>
+	<style>
+#info tr td:first-child {
+	text-align:right;
+	vertical-align:middle;
+	color:rgba(25,101,173,1.00);
+}
+	</style>
+
+<table id="info" class="table table-hover table-striped" style="margin-top:30px">
+	<tr><td width="20%">上課地點</td><td>亞東技術學院 </td></tr>
+<tr><td>招生對象</td><td>公司或工廠登記地址在新北市轄區之資通訊產業及<br>對資通訊產業有興趣之中小企業負責人、中高階主管或獲公司推薦之員工 </td></tr>
+<tr><td>招生人數</td><td>每班40人，每一系列一班，共三班 </td></tr>
+<tr><td>費用</td><td>2000元 </td></tr>
+<tr><td>報名日期</td><td>即日起至系列課程開課前三天或額滿為止。 </td></tr>
+</table>
+
+<div class="center-block" style="width:200px;">
+<a target="_blank" style="width:200px; margin:30px 0; padding:30px" href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form" class="btn btn-lg btn-primary " >馬上報名GO</a></div>
 </div>
 </div>
 <!-- InstanceEndEditable -->
