--- a/MobileEco/index.html
+++ b/MobileEco/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>ICT行銷暨商務學院</title>
+<title>首頁 | ICT行銷暨商務學院</title>
 <!-- InstanceEndEditable -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <script src="js/bootstrap.min.js"></script>
@@ -18,12 +18,11 @@
 	<div class="container" style="background-image:url(img/banner.png); background-size:cover; height:300px;">
 		<div class="seo">
 			<h1>ICT行銷暨商務學院</h1>
+		</div>
 	</div>
-</div>
-
-<div id="nav" class="navbar navbar-inverse" role="navigation" style="border:none;">
-	<div class="container " style="background:rgba(0,0,0,1.00); border-color: #080808;">
-		<div class="navbar-header ">
+	<div id="nav" class="navbar navbar-inverse" role="navigation" style="border:none;">
+	<div class="container " style=" background-image:url(img/footer.jpg); border-color: #080808;">
+		<div class="navbar-header "> 
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
@@ -39,59 +38,78 @@
 				<li><a href="movie.html">微電影數位行銷系列課程</a></li>
 				<li><a href="commerce.html">電子商務系列課程</a></li>
 				<li><a href="mobile.html">行動經濟系列課程</a></li>
-				<li><a href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form">馬上報名</a></li>
+				<li><a href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form" target="_blank">馬上報名</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
 </div>
+</div>
+
+
 <!-- InstanceBeginEditable name="content" -->
 <div class="content">
 <div class="container">
 	<p class="main-intro">【ICT 行銷暨商務學院】開設電子商務、微電影數位行銷及行動經濟等實務等課程，指導學員分組完成網站規劃與設計、微電影腳本創作、實作拍攝、剪輯後製、音樂特效及影片上線及智慧型手機 APP 程式設計等。</p>
-
+<div class="clearfix">
 <div id="i-movie" class="pre-intro  center-block">
-	<h2 style="color:rgba(255,52,194,1.00); ">微電影數位行銷系列課程<br>
-	</h2>
-	<p>30小時<br>
-		日期：2014年 6/28 ~ 8/9 每週六09:00 ~ 17:00<br>
-		微電影腳本創作、實作拍攝、剪輯後製、音樂特效及影片上線<br>
-</p>
+	<div>
+	<h2 style="color:rgba(255,52,194,1.00); ">微電影數位行銷系列課程	</h2>
+	
+	<p class="inside middle"><span>微電影腳本創作、實作拍攝、剪輯後製、音樂特效及影片上線</p><p class="time">2014年 6/28 ~ 8/9<br>
+		每週六09:00 ~ 17:00<br>
+		共30小時	</p></p>
+	<a class="btn btn-info" href="movie.html" style="width:100%;">查看課程</a>
+
+	</div>
 </div>
 
 <div id="i-commerce" class="pre-intro  center-block">
-	<h2 style="color:rgba(28,65,255,1.00); ">電子商務系列課程<br>
-		</h2>
-	<p>27小時<br>
-		日期：2014年 7/12 ~ 8/9 每週六09:00 ~ 17:00<br>
-		指導學員分組完成網站規劃與設計<br>
-	</p>
+	<div>
+	<h2 style="color:rgba(255,52,194,1.00); ">電子商務系列課程		</h2>
+	
+	<p class="inside middle"><span>指導學員分組完成網站規劃與設計</span> </p><p class="time">2014年 7/12 ~ 8/9<br>
+		每週六09:00 ~ 17:00<br>
+共27小時</p>
+	<a class="btn btn-info" href="commerce.html" style="width:100%;">查看課程</a>
+
+	</div>
 </div>
 
 <div id="i-mobile" class="pre-intro center-block">
-	<h2 style="color:rgba(27,231,62,1.00);">
+	<div>
+	<h2 style="color:rgba(255,52,194,1.00);">
 		行動經濟系列課程
-		
-	</h2>
-	<p>30小時<br>
-		日期：2014年 7/12 ~ 8/9 每週六09:00 ~ 17:00<br>
-		
-		智慧型手機 APP 程式設計<br>
-		
-	</p>
-</div>
-<div>
-	<p><br>
-	</p>
-	<p>上課地點：亞東技術學院 <br>
-		招生對象：公司或工廠登記地址在新北市轄區之資通訊產業及對資通訊產業有興趣之中小企業負責人、中高階主管或獲公司推薦之員工 <br>
-		招生人數：每班40人，每一系列一班，共三班 <br>
-		費用：2000元 <br>
-		報名日期：即日起至系列課程開課前三天或額滿為止。 <br>
-			<a target="_blank" style="width:95%; margin:30px 0; height:50px;" href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form" class="btn btn-lg btn-primary center-block" >馬上報名GO</a>
-</div>
-</div>
-</div>
+</h2>
+	
+	<p class="inside middle"><span>智慧型手機 APP 程式設計</span></p><p class="time">2014年 7/12 ~ 8/9<br>
+每週六09:00 ~ 17:00<br>
+共30小時</p>
+		<a class="btn btn-info" href="mobile.html" style="width:100%;">查看課程	</a>
 
+	</div>
+
+</div>
+</div>
+	<style>
+#info tr td:first-child {
+	text-align:right;
+	vertical-align:middle;
+	color:rgba(25,101,173,1.00);
+}
+	</style>
+
+<table id="info" class="table table-hover table-striped" style="margin-top:30px">
+	<tr><td width="20%">上課地點</td><td>亞東技術學院 </td></tr>
+<tr><td>招生對象</td><td>公司或工廠登記地址在新北市轄區之資通訊產業及<br>對資通訊產業有興趣之中小企業負責人、中高階主管或獲公司推薦之員工 </td></tr>
+<tr><td>招生人數</td><td>每班40人，每一系列一班，共三班 </td></tr>
+<tr><td>費用</td><td>2000元 </td></tr>
+<tr><td>報名日期</td><td>即日起至系列課程開課前三天或額滿為止。 </td></tr>
+</table>
+
+<div class="center-block" style="width:200px;">
+<a target="_blank" style="width:200px; margin:30px 0; padding:30px" href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form" class="btn btn-lg btn-primary " >馬上報名GO</a></div>
+</div>
+</div>
 <!-- InstanceEndEditable -->
 
   
