--- a/MobileEco/course.html
+++ b/MobileEco/course.html
@@ -8,6 +8,7 @@
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <script src="js/bootstrap.min.js"></script>
 <link href="css/all.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="img/loco-ico.png">
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 </head> 
@@ -18,12 +19,11 @@
 	<div class="container" style="background-image:url(img/banner.png); background-size:cover; height:300px;">
 		<div class="seo">
 			<h1>ICT行銷暨商務學院</h1>
+		</div>
 	</div>
-</div>
-
-<div id="nav" class="navbar navbar-inverse" role="navigation" style="border:none;">
-	<div class="container " style="background:rgba(0,0,0,1.00); border-color: #080808;">
-		<div class="navbar-header ">
+	<div id="nav" class="navbar navbar-inverse" role="navigation" style="border:none;">
+	<div class="container " style=" background-image:url(img/footer.jpg); border-color: #080808;">
+		<div class="navbar-header "> 
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
@@ -39,16 +39,20 @@
 				<li><a href="movie.html">微電影數位行銷系列課程</a></li>
 				<li><a href="commerce.html">電子商務系列課程</a></li>
 				<li><a href="mobile.html">行動經濟系列課程</a></li>
-				<li><a href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form">馬上報名</a></li>
+				<li><a href="https://docs.google.com/forms/d/1NrFmqxDuimiADERt4AuUSoIBLRZrX5Qh7SFC1C8zXGY/viewform?usp=send_form" target="_blank">馬上報名</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
 </div>
+</div>
+
+
 <!-- InstanceBeginEditable name="content" -->
-<div class="content">
+<div id="course" class="content">
 <div class="container">
+<h1>課程資訊</h1>
 <div class="clearfix">
-<div id="i-movie" class="pre-intro  center-block">
+<div id="i-movie" class="pre-intro  center-block" style="padding-left:0;">
 	<div>
 	<h2 style="color:rgba(255,52,194,1.00); ">微電影數位行銷系列課程	</h2>
 	
@@ -72,7 +76,7 @@
 	</div>
 </div>
 
-<div id="i-mobile" class="pre-intro center-block">
+<div id="i-mobile" class="pre-intro center-block"  style="padding-right:0;">
 	<div>
 	<h2 style="color:rgba(255,52,194,1.00);">
 		行動經濟系列課程
