--- a/MobileEco/index.html
+++ b/MobileEco/index.html
@@ -8,6 +8,7 @@
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <script src="js/bootstrap.min.js"></script>
 <link href="css/all.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="img/loco-ico.png">
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 </head> 
