--- a/Test/ajax_at_Initial.html
+++ b/Test/ajax_at_Initial.html
@@ -19,7 +19,7 @@ function pullDone (data) {
 		 $("#apd").append("<p>"+rows[i]["time"] +" , " + rows[i]["publication"] + " , " + rows [i]["editor"] +"<p>" )
 	 }
 	$("#apd").append("<h4>Pull done</h4>");
-	$("#apd").append("<span style='color:green;'>I hope that the data pulled could be crawled by google robot, how to do that ?</span> ");
+	$("#apd").append("<span style='color:green;'>I hope that the data pulled could be crawled by google robot without the ability to edit the server, how to do that ?</span> ");
 }
 </script>
 <script src= "https://script.google.com/macros/s/AKfycbwjTaclaKdzdr4IgCOM_PpIWJvxFSGkz2qLgrhfJ5fNYf09djI/exec?id=1rnLnui4IXBKZcsDH5zxFHS_rO4TpRPGQD9RY4C_OMAc&callback=pullDone"></script>
