--- a/TEDx/index.html
+++ b/TEDx/index.html
@@ -56,7 +56,7 @@ hr { display:block; width:100%; background:url(../img/hr.png) top center no-repe
 				<li class="withSubNav clearfix">
 					<a href="acts/index.html">TED活動</a>
 					<ul class="subNav">
-						<li><a href="#">2013 From Idea To Action</a></li>
+						<li><a href="2013-from-idea-to-action/index.html">2013 From Idea To Action</a></li>
 					</ul>
 				</li>
 				<li class="withSubNav clearfix">
