--- a/TEDx/2013-from-idea-to-action/index.html
+++ b/TEDx/2013-from-idea-to-action/index.html
@@ -173,7 +173,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 <nav>
 	<div id="nav" class="container clearfix">
 		<div style="float:left;">
-			<a href="//tedxnccu.com"><img src="img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;"></a>
+			<a href="../index.html"><img src="img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;"></a>
 		</div>
 		<div style="float:right">
 			<ul id="mainNav" class="hrzUL clearfix">
