--- a/Final/ch1.html
+++ b/Final/ch1.html
@@ -227,7 +227,7 @@ var n =
 			.append(TweenMax.fromTo($('#nullbg'),10,{css:{top:0},immediateRender:false },{css:{top:100},ease:Linear.easeNone}))
 //			.append(TweenMax.fromTo($('#bg'),5,{css:{top:0},immediateRender:false },{css:{top:-bgDy},ease:Linear.easeNone}))
 	//	.append(TweenMax.fromTo($('#nullbg'),5,{css:{opacity:0},immediateRender:false },{css:{opacity:1},ease:Linear.easeNone}))
-		,onUnpin : function (){alert ('unpinBG');}
+		,onUnpin : function (){}//alert ('unpinBG');}
 		
 	});	
 	
@@ -249,7 +249,7 @@ var n =
 			.append (TweenMax.fromTo($('#a1p5'),5,{css:{top:250},immediateRender:false , ease:Linear.easeNone},{css:{top:50},ease:Linear.easeNone}))
 //			.append (TweenMax.fromTo($('#a1p5'),.5,{css:{top:50 , opacity:1},immediateRender:false , ease:Linear.easeNone},{css:{top:-100,opacity:0},ease:Linear.easeNone}))
 
-		,onUnpin : function (){ alert ("unpinText");}
+		,onUnpin : function (){ }//alert ("unpinText");}
 	
 	});
 	
